Novo html adicionado

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <label for="siteUsuario">website</label><br>
             <input type="text" name="" id="siteUsuario" placeholder="site"/><br>
             <label for="mensagemUsuario">Mensagem</label><br>
-            <textarea name="" id="mensagemUsuario"></textarea><br>
+            <textarea name="" id="mensagemUsuario" rows="2" cols="22"></textarea><br>
             <button>Enviar</button>
           </form>
 
@@ -119,8 +119,8 @@
         <input type="checkbox" id="marcaFiat" checked>  
     </body>
 
-    <form action="">
+    <form action="contato.html">
     <p>Formulario de Contato</p>
-    <button><a href="">Enviar</a></button>
+    <button><a href="contato.html" target="_blank">Enviar</a></button>
     </form>
 </html>
